<resources>
    <string name="app_name">ChitChatApp</string>
    <string name="text_login">Login</string>
    <string name="text_welcome_back">Welcome Back !!</string>
    <string name="text_please">Please login your account and enjoy</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_user_name">username</string>
    <string name="text_signin">Sign In</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_hello">Hello! enjoy to this application</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_con_google">Continue with Google</string>
    <string name="text_register">Register</string>
    <string name="Hello">Hello</string>
    <string name="text_security_warning">Your messages and calls are secured with end-to-end encryption  which means third parties cannot read or listen,  so dont worry for your privacy</string>
    <string name="text_security">security</string>
    <string name="text_setting">Setting</string>
    <string name="text_hifriends">hi friends</string>
    <string name="textabout">" This is the chat application of this application you can chat with friends, family, or other people remotely before this you can add numbers that you need to start chatting, simple right ? Thank you to all of you"</string>
    <string name="text_about">about</string>
    <string name="text_helping">Helping</string>
    <string name="text_info">informasi</string>
    <string name="text_contact">contact us</string>
    <string name="text_privasi">"  privacy policy and terms"</string>
    <string name="text_privasi_bar">Privasi</string>
    <string name="text_in_key">who can see your personal information</string>
    <string name="text_last_see">Last see</string>
    <string name="text_jumlah">16 person</string>
    <string name="text_infor">Info</string>
    <string name="text_status">Status</string>
    <string name="text_report_read">Report read</string>
    <string name="text_report">if you turn it off, you will not send or receive read reports</string>
    <string name="text_block_contack">Block Contact</string>
    <string name="text_aboutapp">About App</string>
    <string name="text_message_email">Please create email</string>
    <string name="text_message_password">please create password</string>
    <string name="error_message">Error message</string>
    <string name="text_message_username">Please write your username</string>
    <string name="text_email_message">Please write your email</string>
    <string name="text_password_message">Please write your password</string>
    <string name="Text_users">Users</string>
    <string name="upload">uploading . . .</string>
    <string name="wait_for_upload">Image is uploading, please wait...</string>
    <string name="no_message">no message</string>
    <string name="image_sent">Image Send</string>
    <string name="write_message_here">write message here...</string>
    <string name="write_message_fisrt">Please write a message first</string>
    <string name="pick_image">pick image</string>
    <string name="image_upload">Image Uploading</string>
    <string name="image_view">image view</string>
    <string name="text_username">username</string>
    <string name="search_user_here">Search user here. . .</string>
    <string name="text_signout">sign out</string>
</resources>