<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreyLight"
    tools:context=".PrivasiActivity">

    <LinearLayout
        android:id="@+id/ll_tapBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_59dp"
        android:background="@color/colorBlueDark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back_register"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="110dp"
            android:text="@string/text_privasi_bar"
            android:textColor="@android:color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_key"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="130dp"
        android:src="@drawable/key" />

    <TextView
        android:id="@+id/tv_end_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        android:layout_toEndOf="@id/iv_key"
        android:text="@string/text_in_key"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/ll_last_see"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_below="@id/tv_end_key">
        <TextView
            android:id="@+id/tv_last_see"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_last_see"
            android:layout_marginStart="40dp"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_jumlah"
            android:layout_marginTop="5dp"
            android:layout_marginStart="40dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_below="@id/ll_last_see">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_infor"
            android:layout_marginStart="40dp"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_jumlah"
            android:layout_marginTop="5dp"
            android:layout_marginStart="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_below="@id/ll_info">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_status"
            android:layout_marginStart="40dp"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_jumlah"
            android:layout_marginTop="5dp"
            android:layout_marginStart="40dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_report_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_below="@id/ll_status">


        <TextView
            android:id="@+id/tv_repost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_report_read"
            android:layout_marginStart="40dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_report"
            android:layout_marginTop="5dp"
            android:layout_marginStart="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_block_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_below="@id/ll_report_read">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_block_contack"
            android:layout_marginStart="40dp"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_jumlah"
            android:layout_marginTop="5dp"
            android:layout_marginStart="40dp"/>
    </LinearLayout>

</RelativeLayout>