<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreyLight"
    tools:context=".fragment.SettingFragment">

    <LinearLayout
        android:id="@+id/ll_setting_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_59dp"
        android:background="@color/colorBlueDark"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="155dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_setting"
            android:textColor="@android:color/white"
            android:textSize="27sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_80dp"
        android:orientation="horizontal"
        android:padding="@dimen/_5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_setting"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:src="@drawable/profile" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7dp"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginEnd="@dimen/_7dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_username_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:text="@string/text_username"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9dp"
                android:text="@string/text_hifriends"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bwh_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_profile"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_privasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="33dp"
            android:text="@string/text_privasi"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_security"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_security"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_helping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_helping"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_aboutapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_aboutapp"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

    </LinearLayout>


</RelativeLayout>