<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreyLight"
    tools:context=".activity.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverLay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlueDark"
            app:popupTheme="@style/AppTheme.PopupOverLay" />
    </com.google.android.material.appbar.AppBarLayout>



<!--    <LinearLayout-->
<!--        android:id="@+id/ll_top"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="@dimen/_59dp"-->
<!--        android:orientation="horizontal"-->
<!--        android:background="@color/colorBlueDark">-->

<!--        <ImageView-->
<!--            android:id="@+id/iv_back"-->
<!--            android:layout_width="38dp"-->
<!--            android:layout_height="38dp"-->
<!--            android:layout_marginLeft="12dp"-->
<!--            android:layout_marginTop="7dp"-->
<!--            android:src="@drawable/back_arrow"/>-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/text_login"-->
<!--            android:textSize="28sp"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:layout_marginLeft="120dp"-->
<!--            android:layout_marginTop="7dp"/>-->
<!--    </LinearLayout>-->

    <TextView
        android:id="@+id/tv_welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome_back"
        android:textSize="35sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_please"
        android:text="@string/text_please"
        android:layout_below="@id/tv_welcome_back"
        android:textColor="@android:color/black"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="33dp"
        android:textStyle="italic"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_email_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/et_password_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:background="@color/colorBtn"
            android:text="@string/text_signin"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>